--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,19 +44,19 @@
             <a id="btn-proposer_evenement" class="nav-link btn btn-default btn-rounded ml-auto" href="{{ path('proposerevenements') }}">Proposer un événement &nbsp;<i class="fa fa-plus-circle" aria-hidden="true"></i></a>
                 
             <ul class="navbar-nav">
-                    <li class="nav_item"><a class="nav-link" href="{{ path('evenements') }}">Les événements</a></li>
+                    <li class="nav_item"><a class="nav-link font-weight-normal" href="{{ path('evenements') }}">Les événements</a></li>
                 {# accès limité aux utilisateurs admin #}
                 {% if is_granted('ROLE_SUPER_ADMIN') %}
-                    <li class="nav_item"><a class="nav-link" href="{{ path('ajouterSport') }}">Gestion Sports</a></li>
+                    <li class="nav_item"><a class="nav-link font-weight-normal" href="{{ path('ajouterSport') }}">Gestion Sports</a></li>
                 {% endif %}  
                 {# accès limité aux utilisateurs connectés, on affiche mon compte et deconnexion #}
                 {% if is_granted('ROLE_USER') %}
-                    <li class="nav_item"><a class="nav-link" href="{{ path('profil') }}">Compte Admin</a></li>
-                    <li class="nav_item"><a class="nav-link" href="{{ path('deconnexion') }}">Déconnexion</span></a></li>
+                    <li class="nav_item"><a class="nav-link font-weight-normal" href="{{ path('profil') }}">Compte Admin</a></li>
+                    <li class="nav_item"><a class="nav-link font-weight-normal" href="{{ path('deconnexion') }}">Déconnexion</span></a></li>
                 {# si l'utilisateur n'est pas connecté, on affiche inscription / connexion #}
                 {% else %}
-                    <li class="nav_item"><a class="nav-link" href="{{ path('inscription') }}">Inscription</a></li>
-                    <li class="nav_item"><a class="nav-link" href="{{ path('connexion') }}">Connexion</a></li>
+                    <li class="nav_item"><a class="nav-link font-weight-normal" href="{{ path('inscription') }}">Inscription</a></li>
+                    <li class="nav_item"><a class="nav-link font-weight-normal" href="{{ path('connexion') }}">Connexion</a></li>
                 {% endif %}
 
             </ul>
