--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -13,5 +13,14 @@
 	<button class="btn btn-primary" type="submit"><a href="{{ asset('evenements/inscription/') }}{{ evenement.id }}" class="blue-text ml-1"> Je participe</a></i></button>
 
 </section>
+	<div>
+		{% for comment in comments %}
+	Autheur : {{ comment.user }}<br>
+	Date : {{ comment.date }}<br>
+	Message : {{ comment.commentaire }}<br>
+	
+	{% endfor %}
 
+
+	</div>
 {% endblock %}
