--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -2,6 +2,8 @@
 
 {% block main %}
 <section class="form-elegant container">
+	<div>
+		
 	{% for evenement in evenements %}
 	Titre : {{ evenement.titre }}<br>
 	Organisé par : {{ evenement.organisateur }}<br>
@@ -10,6 +12,8 @@
 	Niveau demandé : {{ evenement.niveau.nom }}<br>
 	{{ evenement.sport.nom }}
 	{% endfor %}
+	</div>
+
 
 </section>
 
