--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -14,12 +14,12 @@
 
 </section>
 	<div>
-		{% for comment in comments %}
-	Autheur : {{ comment.user }}<br>
+		
+	Auteur : {{ comments.user }}<br>
 	Date : {{ comment.date }}<br>
 	Message : {{ comment.commentaire }}<br>
 	
-	{% endfor %}
+
 
 
 	</div>
