--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -14,12 +14,12 @@
 
 </section>
 	<div>
-		
-	Auteur : {{ comments.user }}<br>
-	Date : {{ comment.date }}<br>
-	Message : {{ comment.commentaire }}<br>
+		{% for comment in comment %}
+	Auteur : {{ comments.user.username }}<br>
+	Date : {{ comments.date|date('d/m/Y') }}<br>
+	Message : {{ comments.commentaire }}<br>
 	
-
+	{% endfor %}
 
 
 	</div>
