--- a/templates/sitepublic/proposer.html.twig
+++ b/templates/sitepublic/proposer.html.twig
@@ -36,14 +36,17 @@
 					{{ form_widget(form.participantMax, {'attr': {'class': 'form-control'}}) }}
 					{{ form_label(form.participantMax, "Nombre de participants maximum") }}
 		    	</div>
-		    	<div class="text-center">
-		        	<button class="btn btn-primary" type="submit">S'inscrire ! <i class="fa fa-paper-plane-o ml-1"></i></button>
-		        </div>
+		    	<div class="md-form">
+					{{ form_widget(form.localisation, {'attr': {'class': 'form-control'}}) }}
+					{{ form_label(form.localisation, "Ville de l'événement") }}
+		    	</div>
 		    	<div class="md-form">
 		        	{{ form_errors(form.niveau) }}
 					{{ form_label(form.niveau, "Niveau requis") }}
 		    	</div>
-
+		    	<div class="text-center">
+		        	<button class="btn btn-primary" type="submit">S'inscrire ! <i class="fa fa-paper-plane-o ml-1"></i></button>
+		        </div>
 		    {{ form_end(form) }}
 		</div>
 
