--- a/templates/sitepublic/comments.html.twig
+++ b/templates/sitepublic/comments.html.twig
@@ -1,9 +1,18 @@
+{% extends 'base.html.twig' %}
 
+{% block main %}
 <div>
-		{% for comments in comments %}
-	Auteur : {{ comments.user.username }}<br>
-	Date : {{ comments.date|date('d/m/Y') }}<br>
-	Message : {{ comments.commentaire }}<br>
+
+	{{ form_start(form, {'method': 'POST'}) }}
+
+	{{ form_end(form) }}
+
+		{% for comment in comments %}
+	Auteur : {{ comment.user.username }}<br>
+	Date : {{ comment.date|date('d/m/Y') }}<br>
+	Message : {{ comment.commentaire }}<br>
 	
-	{% endfor %}
+		{% endfor %}
 	</div>
+
+{% endblock %}
