--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-<section class="form-elegant container margin-top">
+<section class="form-elegant container margin-top">	
 	{% for evenement in evenements %}
 	Titre : {{ evenement.titre }}<br>
 	Organisé par : {{ evenement.organisateur }}<br>
@@ -10,6 +10,8 @@
 	Niveau demandé : {{ evenement.niveau.nom }}<br>
 	{{ evenement.sport.nom }}
 	{% endfor %}
+	</div>
+
 
 </section>
 
