--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -69,7 +69,8 @@
 </header>
 
 <main>
-    {% block main %}{% endblock %}
+    {% block main %}
+    {% endblock %}
 </main>
 
 <footer class="page-footer">
