--- a/templates/admin/sport.html.twig
+++ b/templates/admin/sport.html.twig
@@ -2,9 +2,15 @@
 
 {% block main %}
 <section class="form-elegant container">
-	 {{ form_start(form, {'method': 'POST'}) }}
+	 {{ form_start(sportForm, {'method': 'POST'}) }}
 		<button class="btn btn-primary" type="submit">Enregistrer<i class="fa fa-paper-plane-o ml-1"></i></button>
-	{{ form_end(form) }}
+	{{ form_end(sportForm) }}
+
+	Sport déjà enregistrés :<br>
+	{% for sport in sports %}
+		{{ sport.nom}} 
+		<button class="btn btn-primary" type="submit"><a href="{{ asset('admin/supprimer/sport/') }}{{ sport.id }}" class="blue-text ml-1"> Supprimer </a></i></button><br>
+	{% endfor %}
 </section>
 
 {% endblock %}
