--- a/templates/sitepublic/proposer.html.twig
+++ b/templates/sitepublic/proposer.html.twig
@@ -22,12 +22,7 @@
 					{{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
 					{{ form_label(form.description, "Description de l'événement") }}
 		    	</div>
-		    	<div class="md-form">
-		        	{# {{ form_row(form.statut) }} #}
-		        	{{ form_errors(form.statut) }}
-					{{ form_widget(form.statut, {'attr': {'class': 'form-control'}}) }}
-					{{ form_label(form.statut, "Cet événement est privé") }}
-		    	</div>
+
 		    	<div class="md-form">
 		        	{{ form_errors(form.dateEvenement) }}
 					{{ form_widget(form.dateEvenement, {'attr': {'class': 'form-control'}}) }}
@@ -36,10 +31,10 @@
 					{{ form_widget(form.participantMax, {'attr': {'class': 'form-control'}}) }}
 					{{ form_label(form.participantMax, "Nombre de participants maximum") }}
 		    	</div>
-		    	<div class="md-form">
+{# 		    	<div class="md-form">
 					{{ form_widget(form.localisation, {'attr': {'class': 'form-control'}}) }}
 					{{ form_label(form.localisation, "Ville de l'événement") }}
-		    	</div>
+		    	</div> #}
 		    	<div class="md-form">
 		        	{{ form_errors(form.niveau) }}
 					{{ form_label(form.niveau, "Niveau requis") }}
