--- a/templates/security/infouser.html.twig
+++ b/templates/security/infouser.html.twig
@@ -1,5 +1,3 @@
-{% extends "profil.html.twig" %}
-
-{# AJOUTER UN CONTROLLER POUR AFFICHER CETTE VUE ?? #}
+{# infouser.html.twig #}
 
 {% block infouser %} <p>Les informations de notre utilisateur ! </p> {% endblock %}
