--- a/templates/security/profil.html.twig
+++ b/templates/security/profil.html.twig
@@ -14,7 +14,7 @@
 			            <div class="modal-header amber"></div>
 
 			            {# Avatar #}
-			            <div class="avatar mx-auto d-block">
+			            <div class=" avatar avatar-profil mx-auto d-block">
 			            	<img class="img-fluid" src="http://static1.purepeople.com/articles/8/26/71/48/@/3774028-emma-watson-a-la-warner-bros-pictures-a-950x0-2.jpg" alt="votre image de profil">
 			            </div>
 
