--- a/templates/admin/categorie.html.twig
+++ b/templates/admin/categorie.html.twig
@@ -6,7 +6,7 @@
 		<button class="btn btn-primary" type="submit">Enregistrer<i class="fa fa-paper-plane-o ml-1"></i></button>
 	{{ form_end(categorieForm) }}
 
-	Categories déjà enregistrées :
+	Categories déjà enregistrées :<br>
 	{% for categorie in categories %}
 		{{ categorie.nom}}
 	{% endfor %}
