--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,6 +83,10 @@
     <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="{{ asset('js/mdb.min.js') }}"></script>
+    <!-- API Google Autocomplete adress JavaScript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWl9oQrU_n1fcnBYRJn0Ck55akDfyhos&libraries=places"></script>
+    <!-- API Google Autocomplete adress JavaScript -->
+    <script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
 
 {# ajout de jQuery en fonction des pages #}
 {% block javascripts %}{% endblock %}
