modification du css
rangement et création de class dimensions pour les avatars

--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -19,7 +19,7 @@
 		    <div class="d-inline-flex flex-column align-items-center profil-user-evenements col-md-3">
 
 		    	{# AVATAR #}
-		        <div class="avatar d-block">
+		        <div class="avatar avatar-90 d-block">
 		        	<img class="img-fluid" src="{{ asset('img/uploads/user/')}}{{ app.user.photo }}">
 		        </div>
 
