--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,30 +1,87 @@
-.plusun-color {
-	color : #22B573;
-}
+/**********************************************************************/
+/*----------------------------- COULEURS -----------------------------*/
 
-.plusun-bg {
-	background-color: #22B573;
-}
+	/* couleur */
+	.plusun-color {
+		color : #22B573;
+	}
 
-.btn-plusun {
-	background-color: #22B573;
-	border-color : #22B573;
-}
+	/* background */
+	.plusun-bg {
+		background-color: #22B573;
+	}
 
-/*------------------------ BLOCK MAIN --------------------------*/
+	/* bouton */
+	.btn-plusun {
+		background-color: #22B573;
+		border-color : #22B573;
+	}
 
-.margin-top {
-	margin-top: 150px;
-}
-
-/*------------------------ BLOCK MAIN --------------------------*/
-
-
-
+/*----------------------------- COULEURS -----------------------------*/
+/**********************************************************************/
 
 
 
-/*------------------------ BLOCK MAIN NAV --------------------------*/
+
+
+/**********************************************************************/
+/*---------------------------- AVATAR --------------------------------*/
+
+/* CONTAINER AVATAR */
+	.avatar {
+		overflow: hidden;
+
+		border : 5px solid #FFFFFF;
+		background-color: #FFFFFF;
+
+		border-radius: 50%;
+	}
+
+	/* DIMENSIONS AVATAR */
+	.avatar-120 {
+		position : relative;
+		bottom : 65px;
+
+		height : 120px;
+		width : 120px;
+		}
+
+	.avatar-90 {
+		height : 90px;
+		width : 90px;
+		}
+
+	.avatar-55 {
+		height : 55px;
+		width : 55px;
+		}
+
+		/* PHOTO AVATAR */
+		.img-avatar {
+			max-width  : 150%;
+			height: auto;
+
+			position: relative;
+			right: 25%;
+		}
+
+/*---------------------------- AVATAR --------------------------------*/
+/**********************************************************************/
+
+
+
+
+
+/**********************************************************************/
+/*--------------------------- BLOCK MAIN -----------------------------*/
+	
+	/* AJOUTE UNE MARGE EN HAUT POUR NE PAS PASSER SOUS LE MENU */
+	.margin-top {
+		margin-top: 150px;
+	}
+
+
+/*---------------------------- BLOCK NAV ----------------------------*/
 
 
 	/* BOUTON PROPOSER UN EVENEMENT */
@@ -32,24 +89,32 @@
 		margin-right : 20px;
 	}
 
-/*------------------------ BLOCK MAIN NAV --------------------------*/
+/*---------------------------- BLOCK NAV ----------------------------*/
 
 
 
+/*---------------------------- BLOCK MAIN ----------------------------*/
+/**********************************************************************/
+
+
+
+
+
+/**********************************************************************/
+/*-------------------------- BLOCK PROFIL ----------------------------*/
 
 
 
 /*------------------------ BLOCK PROFIL NAV --------------------------*/
 	
 
-	/* MENU SLIDE */
+	/* MENU DU PROFIL */
 	#profil-nav {
 		-webkit-box-shadow: 0 10px 10px 0 #cccccc;
 		box-shadow: 0 10px 10px 0 #cccccc;
 	}
 
 	#profil-nav .modal-header {
-		/*background-color : #22B573;*/
 		background-image: url(../img/logo/plus-un-pattern.png);
 		background-repeat: repeat;
 
@@ -60,36 +125,6 @@
 		overflow: hidden;
 	}
 
-		/* AVATAR Photo de profil */
-		.avatar-profil {
-				position : relative;
-
-				bottom : 65px;
-			}
-			
-		.avatar {
-			height : 120px;
-			width : 120px;
-
-			overflow: hidden;
-
-			border : 5px solid #FFFFFF;
-			background-color: #FFFFFF;
-
-			border-radius: 50%;
-		}
-
-			
-
-			.img-avatar {
-				max-width  : 150%;
-				height: auto;
-
-				position: relative;
-				right: 25%;
-			}
-
-
 	#profil-nav .modal-body {
 		/* annulation des paddings */
 		padding : 0px;
@@ -98,30 +133,30 @@
 		bottom: 65px;
 	}
 
-	#profil-nav .list-group-item {
-		/* annulation des borders colorés */
-		border : none;
+		#profil-nav .list-group-item {
+			/* annulation des borders colorés */
+			border : none;
 
-		/* réduction du padding haut et bas */
-		padding : .5rem 1.25rem;
-	}
-
-		#profil-nav .list-group-item.active {
-			/* background color blanc */
-			background-color: #FFF;
-			border-color : #FFF;
-
-			/* apparence en actif */
-			-webkit-box-shadow:inset 0px 15px 10px -15px #E6E6E6;
-			box-shadow:inset 0px 15px 10px -15px #E6E6E6;
-
-			color : #333;
-
-			font-weight: bold;
+			/* réduction du padding haut et bas */
+			padding : .5rem 1.25rem;
 		}
 
+			#profil-nav .list-group-item.active {
+				/* background color blanc */
+				background-color: #FFF;
+				border-color : #FFF;
 
-		/* BOUTON MENU SLIDE */
+				/* apparence en actif */
+				-webkit-box-shadow:inset 0px 15px 10px -15px #E6E6E6;
+				box-shadow:inset 0px 15px 10px -15px #E6E6E6;
+
+				color : #333;
+
+				font-weight: bold;
+			}
+
+
+		/* BOUTON MENU PROFIL */
 		.btn-rond {
 			-webkit-border-radius: 100%;
 			border-radius: 100%;
@@ -141,34 +176,49 @@
 /*------------------------ BLOCK PROFIL NAV --------------------------*/
 
 
+
+/*-------------------------- BLOCK PROFIL ----------------------------*/
+/**********************************************************************/
+
+
+
+
+
+/**********************************************************************/
 /*--------------------------- BLOCK INDEX ----------------------------*/
 
-.img-banner {
-	height: 500px;
+	/* IMAGE EN BANNIERE */
+	.img-banner {
+		height: 500px;
 
-	margin-top : 75px; /* height du main-nav */
+		margin-top : 75px; /* height du main-nav */
 
-	background-image: url(../img/basketball.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-    background-size: cover;
-
-}
+		background-image: url(../img/basketball.jpg);
+		background-repeat: no-repeat;
+		background-position: center;
+	    background-size: cover;
+	}
 
 /*--------------------------- BLOCK INDEX ----------------------------*/
+/**********************************************************************/
 
+
+
+
+
+/**********************************************************************/
+/*---------------------- BLOCK LISTE EVENEMENTS ----------------------*/
+
+	
+	.banner-liste-evenement {
+		height : 10px;
+		overflow: hidden;
+	}
+
+	.profil-user-evenements {
+		width: 200px;
+	}
 
 
 /*---------------------- BLOCK LISTE EVENEMENTS ----------------------*/
-
-.banner-liste-evenement {
-	height : 10px;
-	overflow: hidden;
-}
-
-.profil-user-evenements {
-	width: 200px;
-}
-
-
-/*---------------------- BLOCK LISTE EVENEMENTS -----------------------*/
+/**********************************************************************/
