--- a/templates/security/profil.html.twig
+++ b/templates/security/profil.html.twig
@@ -14,9 +14,9 @@
 			            <div class="modal-header amber"></div>
 
 			            {# Avatar #}
-			            <div class="d-flex flex-column align-items-center avatar-profil">
+			            <div class="d-flex flex-column align-items-center position-avatar">
 				            <div class="d-inline-flex flex-column align-items-center">
-					            <div class="avatar avatar-120 d-block">
+					            <div class="avatar avatar-120  d-block">
 					            	<img class="img-avatar" src="{{ asset('img/uploads/user/')}}{{ app.user.photo }}" alt="votre image de profil">
 					            </div>
 
