--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -84,9 +84,8 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="{{ asset('js/mdb.min.js') }}"></script>
     <!-- API Google Autocomplete adress JavaScript -->
+    <script type="text/javascript" src="{{ asset('js/apicompletion.js') }}"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWl9oQrU_n1fcnBYRJn0Ck55akDfyhos&libraries=places"></script>
-    <!-- API Google Autocomplete adress JavaScript -->
-    <script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
 
 {# ajout de jQuery en fonction des pages #}
 {% block javascripts %}{% endblock %}
