correction conflit  API - master

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -85,6 +85,10 @@
     <script type="text/javascript" src="{{ asset('js/mdb.min.js') }}"></script>
     <!-- API Google Autocomplete adress JavaScript -->
     <script type="text/javascript" src="{{ asset('js/apicompletion.js') }}"></script>
+
+    <!-- API Google Autocomplete adress JavaScript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWl9oQrU_n1fcnBYRJn0Ck55akDfyhos&libraries=places&callback=initAutocomplete" async defer></script>
+    
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUWl9oQrU_n1fcnBYRJn0Ck55akDfyhos&libraries=places"></script>
 
 {# ajout de jQuery en fonction des pages #}
