--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,3 +224,147 @@
 
 /*---------------------- BLOCK LISTE EVENEMENTS ----------------------*/
 /**********************************************************************/
+
+
+
+
+
+/**********************************************************************/
+/*------------------- BLOCK PROPOSER UN EVENEMENT --------------------*/
+
+
+/* CHECKBOX MAGGLE */
+[type="checkbox"]:not(:checked),
+	[type="checkbox"]:checked {
+		position: absolute;
+		left: -9999px;
+	}
+	[type="checkbox"]:not(:checked) + label,
+	[type="checkbox"]:checked + label {
+		position: relative;
+		padding-left: 75px;
+		cursor: pointer;
+	}
+	[type="checkbox"]:not(:checked) + label:before,
+	[type="checkbox"]:checked + label:before,
+	[type="checkbox"]:not(:checked) + label:after,
+	[type="checkbox"]:checked + label:after {
+		content: '';
+		position: absolute;
+	}
+	[type="checkbox"]:not(:checked) + label:before,
+	[type="checkbox"]:checked + label:before {
+		left:0; top: -2.5px;
+		width: 65px; height: 30px;
+		background: #DDDDDD;
+		border-radius: 15px;
+		-webkit-transition: background-color .2s;
+		-moz-transition: background-color .2s;
+		-ms-transition: background-color .2s;
+		transition: background-color .2s;
+	}
+	[type="checkbox"]:not(:checked) + label:after,
+	[type="checkbox"]:checked + label:after {
+		width: 20px; height: 20px;
+		-webkit-transition: all .2s;
+		-moz-transition: all .2s;
+		-ms-transition: all .2s;
+		transition: all .2s;
+		border-radius: 50%;
+		background: #7F8C9A;
+		top: 2px; left: 5px;
+	}
+
+	/* on checked */
+	[type="checkbox"]:checked + label:before {
+		background:#22B573; 
+	}
+	[type="checkbox"]:checked + label:after {
+		background: #FFF;
+		top: 2px; left: 40px;
+	}
+
+	[type="checkbox"]:checked + label .ui,
+	[type="checkbox"]:not(:checked) + label .ui:before,
+	[type="checkbox"]:checked + label .ui:after {
+		position: absolute;
+		left: 6px;
+		width: 65px;
+		border-radius: 15px;
+		font-size: 14px;
+		font-weight: bold;
+		line-height: 22px;
+		-webkit-transition: all .2s;
+		-moz-transition: all .2s;
+		-ms-transition: all .2s;
+		transition: all .2s;
+	}
+	[type="checkbox"]:not(:checked) + label .ui:before {
+		content: "non";
+		left: 32px
+	}
+	[type="checkbox"]:checked + label .ui:after {
+		content: "oui";
+		color: #FFF;
+	}
+
+	[type="checkbox"]:focus + label:before {
+		border: none;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-ms-box-sizing: border-box;
+		box-sizing: border-box;
+		margin-top: -1px;
+	}
+
+	/* PHOTO */
+
+	.input-file-container {
+	  position: relative;
+	  width: 225px;
+	} 
+	.js .input-file-trigger {
+	  display: block;
+	  padding: 14px 45px;
+	  background: #22B573;
+	  color: #fff;
+	  font-size: 1em;
+	  transition: all .4s;
+	  cursor: pointer;
+	}
+	.js .input-file {
+	  position: absolute;
+	  top: 0; left: 0;
+	  width: 225px;
+	  opacity: 0;
+	  padding: 14px 0;
+	  cursor: pointer;
+	}
+	.js .input-file:hover + .input-file-trigger,
+	.js .input-file:focus + .input-file-trigger,
+	.js .input-file-trigger:hover,
+	.js .input-file-trigger:focus {
+	  background: #FFF;
+	  color: #22B573;
+	  border : 2px solid #22B573;
+	}
+
+	.file-return {
+	  margin: 0;
+	}
+	.file-return:not(:empty) {
+	  margin: 1em 0;
+	}
+	.js .file-return {
+	  font-style: italic;
+	  font-size: .9em;
+	  font-weight: bold;
+	}
+	.js .file-return:not(:empty):before {
+	  content: "Selected file: ";
+	  font-style: normal;
+	  font-weight: normal;
+	}
+
+/*------------------- BLOCK PROPOSER UN EVENEMENT --------------------*/
+/**********************************************************************/
